fixed spacing near logout button and added session_start(); to index.php page

--- a/web/php_project/css/styles.css
+++ b/web/php_project/css/styles.css
@@ -87,6 +87,10 @@ nav {
     border-color: yellowgreen;
 }
 
+#logout-button {
+    margin-left: 5px;
+}
+
 #welcome-message {
     color: white;
     display: inline;
